e2e-tests/tests/config-router/00-deploy-operator.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
  - timeout: 30
    script: |-
      set -o errexit
      set -o xtrace

      source ../../functions
      init_temp_dir # do this only in the first TestStep

      deploy_operator
      deploy_tls_cluster_secrets
      deploy_client
