e2e-tests/tests/config-router/01-create-cluster.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
  - timeout: 30
    script: |-
      set -o errexit
      set -o xtrace

      source ../../functions

      get_cr \
          | yq eval '.spec.mysql.clusterType="group-replication"' - \
          | yq eval '.spec.proxy.router.enabled=true' - \
          | yq eval '.spec.proxy.haproxy.enabled=false' - \
          | kubectl -n "${NAMESPACE}" apply -f -
