e2e-tests/tests/config-router/04-remove-config.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
  - script: |-
      set -o errexit
      set -o xtrace

      source ../../functions

      kubectl -n "${NAMESPACE}" patch ps "$(get_cluster_name)" \
          --type=merge \
          -p '{"spec": {"proxy": {"router": {"configuration": ""}}}}'
