e2e-tests/tests/config-router/05-config-through-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: config-router-router
data:
  mysqlrouter.conf: |
    [default]
    logging_folder=/tmp/router/log

    [logger]
    level=DEBUG
