e2e-tests/tests/config-router/06-restart-router.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
  - script: |-
      set -o errexit
      set -o xtrace

      source ../../functions

      kubectl -n "${NAMESPACE}" rollout restart deployment config-router-router
