e2e-tests/tests/config-router/07-drop-finalizer.yaml
hpiVersion: ps.percona.com/v1alpha1
kind: PerconaServerMySQL
metadata:
  name: config-router
  finalizers: []
