e2e-tests/tests/config-router/98-drop-finalizer.yaml
apiVersion: ps.percona.com/v1
kind: PerconaServerMySQL
metadata:
  name: config-router
  finalizers: []
