e2e-tests/tests/config-router/01-assert.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestAssert
timeout: 420
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  generation: 1
  name: config-router-mysql
spec:
  template:
    spec:
      containers:
      - name: mysql
        volumeMounts:
        - mountPath: /opt/percona
          name: bin
        - mountPath: /var/lib/mysql
          name: datadir
        - mountPath: /.mysqlsh
          name: mysqlsh
        - mountPath: /etc/mysql/mysql-users-secret
          name: users
        - mountPath: /etc/mysql/mysql-tls-secret
          name: tls
        - mountPath: /etc/mysql/config
          name: config
        - mountPath: /etc/mysql/vault-keyring-secret
          name: vault-keyring-secret
      - name: xtrabackup
        volumeMounts:
        - mountPath: /opt/percona
          name: bin
        - mountPath: /var/lib/mysql
          name: datadir
        - mountPath: /etc/mysql/mysql-users-secret
          name: users
        - mountPath: /var/log/xtrabackup
          name: backup-logs
        - mountPath: /tmp
          name: xtrabackup-tmp
        - mountPath: /etc/mysql/vault-keyring-secret
          name: vault-keyring-secret
        - mountPath: /etc/mysql/config
          name: config
        - mountPath: /etc/mysql/encryption-keys
          name: backup-encryption-keys
      volumes:
      - emptyDir: {}
        name: bin
      - emptyDir: { }
        name: mysqlsh
      - name: users
        secret:
          defaultMode: 420
          secretName: internal-config-router
      - name: tls
        secret:
          defaultMode: 420
          secretName: test-ssl
      - name: config
        projected:
          defaultMode: 420
          sources:
          - configMap:
              items:
              - key: my.cnf
                path: my-config.cnf
              name: config-router-mysql
              optional: true
          - configMap:
              items:
                - key: my.cnf
                  path: auto-config.cnf
              name: auto-config-router-mysql
              optional: true
          - secret:
              items:
              - key: my.cnf
                path: my-secret.cnf
              name: config-router-mysql
              optional: true
      - emptyDir: {}
        name: backup-logs
      - emptyDir: {}
        name: xtrabackup-tmp
      - name: vault-keyring-secret
        secret:
          defaultMode: 420
          optional: true
          secretName: config-router-vault
      - name: backup-encryption-keys
        secret:
          defaultMode: 420
          optional: true
          secretName: internal-encryption-keys-config-router
status:
  observedGeneration: 1
  replicas: 3
  readyReplicas: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  generation: 1
  name: config-router-router
status:
  observedGeneration: 1
  readyReplicas: 3
  replicas: 3
  updatedReplicas: 3
