e2e-tests/tests/config-router/02-assert.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestAssert
timeout: 480
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  generation: 1
  name: config-router-mysql
status:
  observedGeneration: 1
  readyReplicas: 3
  replicas: 3
  updatedReplicas: 3
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    mysql.percona.com/primary: "true"
status:
  phase: Running
---
apiVersion: apps/v1
kind: Deployment
metadata:
  generation: 2
  name: config-router-router
status:
  observedGeneration: 2
  readyReplicas: 3
  replicas: 3
  updatedReplicas: 3
