e2e-tests/tests/config-router/03-assert.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestAssert
timeout: 60
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: 03-check-config
data:
  mysqlrouter.conf: |
    [default]
    logging_folder=/tmp/router/log

    [logger]
    level=DEBUG
