e2e-tests/tests/config-router/04-assert.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestAssert
timeout: 420
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  generation: 3
  name: config-router
status:
  observedGeneration: 3
  readyReplicas: 3
  replicas: 3
  updatedReplicas: 3
