e2e-tests/tests/config-router/05-assert.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestAssert
timeout: 120
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: config-router-router
---
apiVersion: apps/v1
kind: Deployment
metadata:
  generation: 4
  name: config-router-router
status:
  observedGeneration: 3
  readyReplicas: 3
  replicas: 3
  updatedReplicas: 3
