e2e-tests/tests/config-router/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: config-router
spec:
  steps:
  - name: step-00
    try:
    - script:
        content: |-
          set -o errexit
          set -o xtrace

          source ../../functions
          init_temp_dir # do this only in the first TestStep

          deploy_operator
          deploy_non_tls_cluster_secrets
          deploy_tls_cluster_secrets
          deploy_client
    - assert:
        file: 00-assert.yaml
  - name: step-01
    try:
    - script:
        content: "set -o errexit\nset -o xtrace\n\nsource ../../functions\n\nget_cr
          \\\n  | yq eval '.spec.mysql.clusterType=\"group-replication\"' - \\\n\t|
          yq eval '.spec.proxy.router.enabled=true' - \\\n\t| yq eval '.spec.proxy.haproxy.enabled=false'
          - \\\n  | kubectl -n \"${NAMESPACE}\" apply -f -"
    - assert:
        file: 01-assert.yaml
  - name: step-02
    try:
    - script:
        content: "set -o errexit\nset -o xtrace\n\nsource ../../functions\n\nkubectl
          -n \"${NAMESPACE}\" patch ps \"$(get_cluster_name)\" \\\n\t--type merge
          \\\n\t-p '{\"spec\": {\"proxy\": {\"router\": {\"configuration\": \"[default]\\nlogging_folder=/tmp/router/log\\n\\n[logger]\\nlevel=DEBUG\\n\"}}}}'"
    - assert:
        file: 02-assert.yaml
  - name: step-03
    try:
    - script:
        content: |-
          set -o errexit
          set -o xtrace

          source ../../functions

          pod=$(get_router_pods | head -n 1)

          echo "$pod"

          if ! kubectl -n "${NAMESPACE}" exec -it $pod -- bash -c 'cat /tmp/router/log/mysqlrouter.log' | grep -q 'DEBUG' ; then
            echo "Failed to find necessary logs in $pod, expected logs in /tmp/router/log/mysqlrouter.log"
            exit 1
          fi
    - assert:
        file: 03-assert.yaml
  - name: step-04
    try:
    - script:
        content: "set -o errexit\nset -o xtrace\n\nsource ../../functions\n\nkubectl
          -n \"${NAMESPACE}\" patch ps \"$(get_cluster_name)\" \\\n\t--type=merge
          \\\n\t-p '{\"spec\": {\"proxy\": {\"router\": {\"configuration\": \"\"}}}}'"
    - assert:
        file: 04-assert.yaml
  - name: step-05
    try:
    - apply:
        file: 05-config-through-configmap.yaml
    - assert:
        file: 05-assert.yaml
  - name: step-07
    try:
    - script:
        content: |-
          set -o errexit
          set -o xtrace

          source ../../functions

          pod=$(get_router_pods | head -n 1)

          echo "$pod"

          if ! kubectl -n "${NAMESPACE}" exec -it $pod -- bash -c 'cat /tmp/router/log/mysqlrouter.log' | grep -q 'DEBUG' ; then
            echo "Failed to find necessary logs in $pod, expected logs in /tmp/router/log/mysqlrouter.log"
            exit 1
          fi
    - assert:
        file: 07-assert.yaml
  - name: step-99
    try:
    - apply:
        file: 99-drop-finalizer.yaml
